# simple-polygon-io

./: CMakeLists.txt  README.md
cmake/: curl.cmake  simple_logger.cmake
include/simple_polygon_io/: aggregates.h  client.h  common.h  config.h  ema.h  exceptions.h  http.h  instruction_execution.h  instruction_executrion.h  macd.h  ohlc.h  sma.h  tickers.h
src/: aggregates.cpp  client.cpp  common.cpp  config.cpp  ema.cpp  exceptions.cpp  http.cpp  instruction_execution.cpp  instruction_executrion.cpp  macd.cpp  ohlc.cpp  sma.cpp  tickers.cpp
tests/: CMakeLists.txt  test_aggregates.cpp  test_client.cpp  test_common.cpp  test_config.cpp  test_ema.cpp  test_exceptions.cpp  test_http.cpp  test_instruction_execution.cpp  test_macd.cpp  test_ohlc.cpp  test_sma.cpp  test_tickers.cpp
